--- a/css/bazdig.css
+++ b/css/bazdig.css
@@ -2,6 +2,7 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 	margin: 0;
 	font-size: 1.25rem;
+	background-color: black;
 }
 /*Typography*/
 h1 {
@@ -59,19 +60,18 @@ header {
 	height: auto;
 	margin: 0;
 }
+
 .container-ads {
 	display: flex;
-	padding: 0;
+	padding: 2em 0;
 	align-items: center;
+	justify-content: space-between;
 }
-.power-app {
-	flex: 1;
-}
-.software {
-	flex: 2;
-}
-.power-wall {
-	flex: 1;
+
+@media (max-width: 850px) {
+	.container-ads {
+		flex-direction: column;
+	}
 }
 .bg-img {
 	width: 100%;
@@ -91,8 +91,8 @@ header {
 	background-clip: text;
 	-webkit-background-clip: text;
 	color: transparent;
-	animation: move 10s linear infinite;
-	-webkit-animation: move 10s linear infinite;
+	animation: move 20s linear infinite;
+	-webkit-animation: move 20s linear infinite;
 	font-family: 'Anton', sans-serif;
 	margin: 0;
 	padding: 0;
@@ -105,6 +105,12 @@ header {
 		background-position: 100% 50%;
 	}
 }
+@media (max-width: 850px) {
+	.model3 {
+		background: url("../images/black.png") no-repeat center center/cover;
+	}
+}
+
 .contact {
 	background-color: #000;
 	color: #fff;
@@ -114,6 +120,7 @@ header {
 }
 footer {
 	background-image: url("../images/ghost.png");
+	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
 	display: flex;
@@ -132,6 +139,10 @@ footer {
 
 @media (max-width: 850px) {
 	footer {
+		background-image: url("../images/red.jpg");
+		background-repeat: no-repeat;
+		background-position: center;
+		background-size: cover;
 		flex-direction: column;
 		align-items: center;
 		justify-content: flex-end;
